[gd_scene load_steps=66 format=3 uid="uid://dy41d187i0bnx"]

[ext_resource type="Script" uid="uid://bpc01e64a2wl6" path="res://scripts/enemy_skeleton_1.gd" id="1_jrg2n"]
[ext_resource type="Texture2D" uid="uid://b2qeyb3f7slso" path="res://assets/Enemy_Animations_Set/enemies-skeleton1_attack.png" id="2_blvbe"]
[ext_resource type="Texture2D" uid="uid://dnb0sq63266iy" path="res://assets/Enemy_Animations_Set/enemies-skeleton1_take_damage.png" id="3_evpjw"]
[ext_resource type="Texture2D" uid="uid://c3erxxbhw11bf" path="res://assets/Enemy_Animations_Set/enemies-skeleton1_death.png" id="4_h7d52"]
[ext_resource type="Texture2D" uid="uid://dr18uq0pasya2" path="res://assets/Enemy_Animations_Set/enemies-skeleton1_idle.png" id="5_g4m0d"]
[ext_resource type="Texture2D" uid="uid://dkwv2nlx3l8ci" path="res://assets/Enemy_Animations_Set/enemies-skeleton1_weaponless_idle.png" id="6_5i0ha"]
[ext_resource type="Texture2D" uid="uid://d2fbm3uqrngbc" path="res://assets/Enemy_Animations_Set/enemies-skeleton1_movement.png" id="7_s558g"]
[ext_resource type="PackedScene" uid="uid://k6pcmdcxufog" path="res://scenes/health_bar.tscn" id="8_i0qdt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dybtr"]
atlas = ExtResource("2_blvbe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltuhb"]
atlas = ExtResource("2_blvbe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx65k"]
atlas = ExtResource("2_blvbe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jfgo"]
atlas = ExtResource("2_blvbe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmujw"]
atlas = ExtResource("2_blvbe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfbxk"]
atlas = ExtResource("2_blvbe")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcapx"]
atlas = ExtResource("2_blvbe")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uj3p"]
atlas = ExtResource("2_blvbe")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyqeh"]
atlas = ExtResource("2_blvbe")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb2r1"]
atlas = ExtResource("3_evpjw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k4hx"]
atlas = ExtResource("3_evpjw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaiok"]
atlas = ExtResource("3_evpjw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65i4x"]
atlas = ExtResource("3_evpjw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1si2q"]
atlas = ExtResource("3_evpjw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31373"]
atlas = ExtResource("4_h7d52")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oaeg"]
atlas = ExtResource("4_h7d52")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1vph"]
atlas = ExtResource("4_h7d52")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu576"]
atlas = ExtResource("4_h7d52")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5ifu"]
atlas = ExtResource("4_h7d52")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agjr4"]
atlas = ExtResource("4_h7d52")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogrof"]
atlas = ExtResource("4_h7d52")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35l0t"]
atlas = ExtResource("4_h7d52")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dr0y"]
atlas = ExtResource("4_h7d52")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5jcw"]
atlas = ExtResource("4_h7d52")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yp8h"]
atlas = ExtResource("4_h7d52")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_upbaj"]
atlas = ExtResource("4_h7d52")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hibe3"]
atlas = ExtResource("4_h7d52")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dggk7"]
atlas = ExtResource("4_h7d52")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8jiq"]
atlas = ExtResource("4_h7d52")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p06j"]
atlas = ExtResource("4_h7d52")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_almff"]
atlas = ExtResource("4_h7d52")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvkcn"]
atlas = ExtResource("5_g4m0d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7u2y"]
atlas = ExtResource("5_g4m0d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmi65"]
atlas = ExtResource("5_g4m0d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk304"]
atlas = ExtResource("5_g4m0d")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxcsm"]
atlas = ExtResource("5_g4m0d")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dg8u"]
atlas = ExtResource("5_g4m0d")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10grn"]
atlas = ExtResource("6_5i0ha")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7o26"]
atlas = ExtResource("6_5i0ha")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_da37b"]
atlas = ExtResource("6_5i0ha")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tevo"]
atlas = ExtResource("6_5i0ha")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ung4s"]
atlas = ExtResource("6_5i0ha")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abifg"]
atlas = ExtResource("6_5i0ha")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk3yn"]
atlas = ExtResource("7_s558g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2byg"]
atlas = ExtResource("7_s558g")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhn4p"]
atlas = ExtResource("7_s558g")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5cej"]
atlas = ExtResource("7_s558g")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vx61"]
atlas = ExtResource("7_s558g")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7vp8"]
atlas = ExtResource("7_s558g")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kbjh"]
atlas = ExtResource("7_s558g")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq4s0"]
atlas = ExtResource("7_s558g")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvr6l"]
atlas = ExtResource("7_s558g")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeud4"]
atlas = ExtResource("7_s558g")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_10grn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dybtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltuhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx65k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jfgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmujw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfbxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcapx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uj3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyqeh")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb2r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k4hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaiok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65i4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1si2q")
}],
"loop": false,
"name": &"damaged",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31373")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oaeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1vph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu576")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5ifu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agjr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogrof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35l0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dr0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5jcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yp8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upbaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hibe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dggk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8jiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p06j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_almff")
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvkcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7u2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmi65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk304")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxcsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dg8u")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_10grn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7o26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da37b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tevo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ung4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abifg")
}],
"loop": true,
"name": &"idle_weaponless",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk3yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2byg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhn4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5cej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vx61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7vp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kbjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq4s0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvr6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeud4")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rm7m4"]
radius = 4.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_10grn"]
radius = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x7o26"]
radius = 9.0
height = 26.0

[node name="BasicSkeleton" type="CharacterBody2D"]
z_index = 4
collision_layer = 8
collision_mask = 13
motion_mode = 1
script = ExtResource("1_jrg2n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["enemies"]]
position = Vector2(3, -13)
sprite_frames = SubResource("SpriteFrames_10grn")
animation = &"damaged"
autoplay = "idle_weaponless"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_rm7m4")

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_10grn")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(6, -9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_x7o26")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_max_distance = 400.0

[node name="PathfindingTimer" type="Timer" parent="."]
autostart = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("8_i0qdt")]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="PathfindingTimer" to="." method="_on_pathfinding_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
